--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -18,7 +18,7 @@
       &__right
         margin-top: 32px
 
-@media screen and (max-width: 1024px)
+@media screen and (max-width: 1024px) and (min-height: 500px)
   .stub-page
     height: 989px
     .main
@@ -55,11 +55,104 @@
           &-left
             right: 400px
 
-@media screen and (max-width: 600px)
+@media screen and (max-width: 950px) and (max-height: 500px) and (orientation: landscape)
+  .stub-page
+    height: 400px
+    .main
+      margin-top: 0
+      height: 320px
+      justify-content: center
+      &:before
+        height: 10%
+      &__left
+        margin-left: 20px
+        margin-top: 32px
+        &-txt
+          font-size: 18px
+      &__right
+        margin-left: 0
+        .koala
+          width: 352px
+          height: 323px
+          margin-top: -10px
+        .bubble
+          width: 180px
+          height: 150px
+          top: -40px
+          &-txt
+            top: 58px
+            left: 35px
+            width: 108px
+            font-size: 19px
+            line-height: 16px
+            text-shadow: 0px 0px 8.107px #00C6FF, 0px 0px 14.741px rgba(0, 198, 255, 0.62), 0px 0px 14.741px rgba(0, 198, 255, 0.62), 0px 0px 14.741px rgba(0, 198, 255, 0.62), 0px 0px 11.056px rgba(0, 198, 255, 0.62)
+        .icons
+          &-top
+            top: 19px
+            right: 92px
+            width: 30px
+            height: 25px
+          &-marks
+            top: 15px
+            right: 25px
+            width: 72px
+            height: 68px
+          &-bottom
+            bottom: -260px
+            right: 109px
+            width: 75px
+            height: 59px
+            animation: floatUpDown2 2s ease-in-out infinite
+          &-left
+            right: 230px
+            top: 150px
+            width: 30px
+            height: 25px
+            animation: floatUpDown 4s ease-in-out infinite
+
+@media screen and (max-width: 780px) and (max-height: 500px) and (orientation: landscape)
+  .stub-page
+    .main
+      &__left
+        margin-left: 50px
+      &__right
+        margin-left: -40px
+
+@media screen and (max-width: 730px) and (max-height: 500px) and (orientation: landscape)
+  .stub-page
+    .main
+      &__left
+        max-width: 250px
+        min-width: 250px
+        &-txt
+          font-size: 16px
+        &-btn
+          font-size: 16px
+      &__right
+        margin-left: -20px
+
+@media screen and (max-width: 613px) and (max-height: 500px) and (orientation: landscape)
+  .stub-page
+    .main
+      &__right
+        margin-left: -30px
+
+@media screen and (max-width: 603px) and (max-height: 500px) and (orientation: landscape)
+  .stub-page
+    .main
+      transform: scale(0.9)
+      transform-origin: center
+
+@media screen and (max-width: 600px) and (orientation: portrait)
   .stub-page
     height: 432px
     .main
+      margin-top: 0
+      width: 100%
       height: 393px
+      flex-direction: column-reverse
+      justify-content: center
+      align-items: center
       &:before
         height: 10%
       &__left
@@ -67,17 +160,23 @@
         min-width: initial
         z-index: 3
         justify-content: flex-end
+        margin-left: 0
+        max-width: 704px
+        text-align: center
         &-txt
           font-size: 18px
         &-btn
           max-width: 100%
           width: 100%
+          margin: 0 auto
       &__right
         margin-top: 0
+        margin-left: 0
         .koala
           width: 352px
           height: 323px
           margin-top: -10px
+          margin-right: 0
         .bubble
           width: 180px
           height: 150px
