--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -56,7 +56,7 @@ body
     background: url("../img/bg-desk.png") no-repeat 14% -28%/cover
     @media screen and (max-width: 1024px)
       background: url("../img/bg-desk.png") no-repeat 69% -28%/cover
-    @media screen and (max-width: 600px)
+    @media screen and (max-width: 600px) and (orientation: portrait)
       background: url("../img/bg-mob.png") no-repeat 50% 25%/cover
     &::before
       content: ''
@@ -111,28 +111,30 @@ body
         background: url("../img/sem.png") no-repeat 50% 50%/cover
         @media screen and (max-width: 600px)
           background: url("../img/sem-mob.png") no-repeat 50% 50%/cover
+        @media screen and (max-width: 950px) and (max-height: 500px) and (orientation: landscape)
+          background: url("../img/sem-mob.png") no-repeat 50% 50%/cover
     .bubble
+      position: absolute
+      top: -125px
+      left: -27px
+      width: 284px
+      height: 224px
+      background: url("../img/bubble.png") no-repeat 0 0/cover
+      @media screen and (max-width: 600px) and (orientation: portrait)
+        background: url("../img/bubble-mob.png") no-repeat 0 0/cover
+      animation: neonBlink 2.5s linear forwards
+      &-txt
         position: absolute
-        top: -125px
-        left: -27px
-        width: 284px
-        height: 224px
-        background: url("../img/bubble.png") no-repeat 0 0/cover
-        @media screen and (max-width: 600px)
-          background: url("../img/bubble-mob.png") no-repeat 0 0/cover
-        animation: neonBlink 2.5s linear forwards
-        &-txt
-          position: absolute
-          text-align: center
-          top: 92px
-          left: 57px
-          font-family: $font-gawaa-italic
-          font-size: 30px
-          text-shadow: 0px 0px 11px #00C6FF, 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 15px rgba(0, 198, 255, 0.62)
-          line-height: 22px
-          color: $white
-          transform: rotate(-6.478deg)
-          width: 164px
+        text-align: center
+        top: 92px
+        left: 57px
+        font-family: $font-gawaa-italic
+        font-size: 30px
+        text-shadow: 0px 0px 11px #00C6FF, 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 20px rgba(0, 198, 255, 0.62), 0px 0px 15px rgba(0, 198, 255, 0.62)
+        line-height: 22px
+        color: $white
+        transform: rotate(-6.478deg)
+        width: 164px
     .icons
       position: absolute
       top: 0
